Quorum3/Library/Tests/Expressions/Pass/AssignmentText.quorum
class Main 
    action Main
        text a = "Hello"
        output a
    end
end