Quorum3/Library/Tests/Expressions/Fail/InvalidFieldName.quorum
class Main
    action Main
        fake:field = undefined
    end
end